2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/GrampletView.py: Gramplet key for detached min size
	* src/plugins/DefaultGramplets.py: RelativesGramplet detached size

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/GrampletView.py: minor change
	* src/plugins/DefaultGramplets.py: new RelativesGramplet
	  Response to issue #1758

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/WritePkg.py: add callback=None, issue #1398

2008-02-13 Benny Malengier <benny.malengier@gramps-project.org>
	* po/POTFILES.in: remove checkpoint.glade

2008-02-13 Peter Landgren <peter.talken@telia.com>
    *src/BaseDoc.py: Removal on debug print

2008-02-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_ButtonTab.py: some accel keys don't work on keyboard
	with numlock as MOD_MASK2, enable the keys for those keyboards

2008-02-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/DisplayTabs/_EmbeddedList.py: allow to define middle click
	* src/Editors/_EditFamily.py: middle click on child calls edit child

2008-02-12 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditFamily.py: popup: edit child at top, add images.
	* src/DisplayTabs/_EmbeddedList.py: allow popup with image/custom text
	* src/DisplayModels/_BaseModel.py: add comment to function
	* src/DisplayModels/_NoteModel.py: test, UTF-8 for preview

2008-02-11 Brian Matherly <brian@gramps-project.org>
	* src/plugins/StatisticsChart.py:
	0001754: Capitalization in Statistics chart
	0001755: Selection of contents in statistics chart does not work

2008-02-11 Brian Matherly <brian@gramps-project.org>
	* src/Editors/_EditNote.py: Fix saving notes without marker being set.

2008-02-11 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/MediaManager.py: conversion functions of path
	* src/Utils.py: general methods to convert abs to rel